--- a/views/Admin/article/modifier.ejs
+++ b/views/Admin/article/modifier.ejs
@@ -1,9 +1,9 @@
-<%- include ('../../include/side.ejs')  %> 
+<%- include('../../include/header') %> 
 
 <div class="container-lg">
   <div class="row justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8">
-          <form class="tab-content py-6" id="wizardSteps" action="/info/admin/article/modifier/<%= article.idArticle %> " method="post"  enctype="multipart/form-data">
+          <form class="tab-content py-6" id="wizardSteps" action=" /admin/article/modifier/<%= article.idArticle %> " method="post"  enctype="multipart/form-data">
               <div class="tab-pane fade show active" id="wizardStepOne" role="tabpanel" aria-labelledby="wizardTabOne">
                   <div class="row justify-content-center">
                       <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
