--- a/views/Admin/auth/connexion.ejs
+++ b/views/Admin/auth/connexion.ejs
@@ -10,7 +10,7 @@
             <div class="p-4 p-sm-5 bg-primary-soft rounded">
                         
                         <!-- Form START -->
-                        <form method="post" action="/info/login" class="mt-4">
+                        <form method="post" action="/login" class="mt-4">
                             <!-- Email -->
                             <div class="mb-3">
                                 <label class="form-label" for="exampleInputEmail1">login</label>
