--- a/views/include/side.ejs
+++ b/views/include/side.ejs
@@ -51,13 +51,13 @@
                 <div class="collapse show" id="sidebarPages">
                   <ul class="nav nav-sm flex-column">
                     <li class="nav-item">
-                      <a href="/info/admin/article/liste/juridique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
+                      <a href="/admin/article/liste/juridique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
                         juridique
                       </a>
-                      <a href="/info/admin/article/liste/scientifique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
+                      <a href="/admin/article/liste/scientifique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
                         scientifique
                       </a>
-                      <a href="/info/admin/article/liste/economique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
+                      <a href="/admin/article/liste/economique" class="nav-link" role="button" aria-expanded="false" aria-controls="sidebarAccount">
                          economique
                       </a>
                     </li>
@@ -67,7 +67,7 @@
 
 
               <li class="nav-item">
-                <a class="nav-link" href="/info/admin/article/create"  role="button" aria-expanded="false" aria-controls="sidebarComponents">
+                <a class="nav-link" href="/admin/article/create"  role="button" aria-expanded="false" aria-controls="sidebarComponents">
                   <i class="fe fe-book-open"></i> Ajouter
                 </a>
               </li>
