--- a/views/visiteurs/article/listeArticle.ejs
+++ b/views/visiteurs/article/listeArticle.ejs
@@ -33,7 +33,7 @@
                                            
                                             <!-- Title -->
                                             <h2 class="card-title">
-                                                <a href="/info/article/lire/<%= element.idArticle %> " class="btn-link text-reset stretched-link"><%= element.titreArticle  %> </a>
+                                                <a href="/article/lire/<%= element.idArticle %> " class="btn-link text-reset stretched-link"><%= element.titreArticle  %> </a>
                                             </h2>
                                             <!-- Author info -->
                                             <div class="d-flex align-items-center position-relative mt-3">
