--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -41,14 +41,14 @@
                 <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="text-body h6 d-none d-sm-inline-block">Menu</span>
                   <span class="navbar-toggler-icon"></span>
-              </button>
+                </button>
     
                 <!-- Main navbar START -->
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <!-- Nav Search START -->
                     <div class="nav mt-3 mt-lg-0 px-4 flex-nowrap align-items-center">
                         <div class="nav-item w-100">
-                            <form class="rounded position-relative" method="post" action="/info/chercher">
+                            <form class="rounded position-relative" method="post" action="  /chercher">
                                 <input class="form-control pe-5 bg-light" name="chercher" type="search" placeholder="chercher un article"  aria-label="Search">
                                 <button class="btn bg-transparent px-2 py-0 position-absolute top-50 end-0 translate-middle-y" type="submit"><i class="bi bi-search fs-5"> </i></button>
                             </form>
@@ -59,7 +59,7 @@
                         
                         <!-- Nav item 1 Demos -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link  active" href="/info" id="homeMenu"  >Home</a>
+                            <a class="nav-link  active" href="/" id="homeMenu"  >Home</a>
                             
                         </li>
     
@@ -67,9 +67,16 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="homeMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
 							<ul class="dropdown-menu" aria-labelledby="homeMenu">
-                                <li> <a class="dropdown-item" href="/info/article/juridique">jurudique</a></li>
-                                <li> <a class="dropdown-item" href="/info/article/scientifique">scientifique</a></li>
-                                <li> <a class="dropdown-item" href="/info/article/economique"> economique  </a></li>
+                                <% if(locals.user){%>
+                                        <li> <a class="dropdown-item" href="/admin/article/liste/juridique">jurudique</a></li>
+                                        <li> <a class="dropdown-item" href="/admin/article/liste/scientifique">scientifique</a></li>
+                                        <li> <a class="dropdown-item" href="/admin/article/liste/economique"> economique </a></li>
+                                    <%}else{ %> 
+                                        <li> <a class="dropdown-item" href="/article/juridique">jurudique</a></li>
+                                        <li> <a class="dropdown-item" href="/article/scientifique">scientifique</a></li>
+                                        <li> <a class="dropdown-item" href="/article/economique"> economique </a></li>
+                                    <% }%>     
+                               
 							</ul>	
                         </li>
     
@@ -77,7 +84,15 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="postMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
                             <ul class="dropdown-menu" aria-labelledby="postMenu">
-                                <li> <a class="dropdown-item" href="/info/login">login</a></li>
+                                <% if(locals.user){%>
+                                <li> <a class="dropdown-item" href="/admin">admin</a></li>
+                                <li> <a class="dropdown-item" href="/admin/article/create">Ajouter</a></li>
+                                <li> <a class="dropdown-item" href="/admin/deconnect">se deconnecter </a></li>  
+
+
+                                <%}else{ %> 
+                                <li> <a class="dropdown-item" href="/login">login</a></li>
+                                <% }%>     
 							</ul>	
                         </li>
     
