--- a/views/visiteurs/article/sortieChercher.ejs
+++ b/views/visiteurs/article/sortieChercher.ejs
@@ -3,39 +3,37 @@
 <section class="pt-0">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+            <div class="col-lg-9 mx-auto">
                 
                     <% if (locals.article) { %>
                         <% article.forEach(element => { %>
                             <div class="card border rounded-3 up-hover p-4 mb-4">
                                 <div class="row g-3">
-                                    <div class="col-lg-5">
+                                    <div class="col-sm-9">
                                        
                                         <!-- Title -->
                                         <h2 class="card-title">
-                                            <a href="/info/article/lire/<%= element.idArticle %> " class="btn-link text-reset stretched-link"><%= element.titreArticle  %> </a>
+                                            <a href="/article/lire/<%= element.idArticle %> " class="btn-link text-reset stretched-link"><%= element.titreArticle  %> </a>
                                         </h2>
                                         <!-- Author info -->
-                                        <div class="d-flex align-items-center position-relative mt-3">
-                                            <div class="avatar me-2">
-                                                <img class="avatar-img rounded-circle" src="/front/assets/images/avatar/04.jpg" alt="avatar">
-                                            </div>
-                                            <div>
-                                                <h5 class="mb-1"><a href="#" class="stretched-link text-reset btn-link">Billy Vasquez</a></h5>
-                                                <ul class="nav align-items-center small">
-                                                    <li class="nav-item me-3">Aug 15, 2022</li>
-                                                    <li class="nav-item"><i class="far fa-clock me-1"></i>18 min read</li>
-                                                </ul>
-                                            </div>
-                                        </div>
+                                        <ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
+                                            <li class="nav-item">
+                                                <div class="nav-link">
+                                                    <div class="d-flex align-items-center position-relative">
+                                                        <div class="avatar avatar-xs">
+                                                            <img class="avatar-img rounded-circle" src="/front/assets/images/avatar/04.jpg" alt="avatar">
+                                                        </div>
+                                                        <span class="ms-3">by <a href="#" class="stretched-link text-reset btn-link">Samuel</a></span>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li class="nav-item">Jan 22, 2021</li>
+                                        </ul>
                                     </div>
-                                    <!-- Detail -->
-                                    <div class="col-md-6 col-lg-4">
-                                        <p><%- element.desc %>.... </p>
-                                    </div>
+                                    
                                     <!-- Image -->
-                                    <div class="col-md-6 col-lg-3">
-                                        <img class="rounded-3" src="data:image/png;base64,<%= element.imageArticle %> " alt="Card image" style="height:250px; width: 320px" >
+                                    <div class="col-sm-3">
+                                        <img class="rounded-3" src="data:image/png;base64,<%= element.imageArticle %> " alt="Card image" >
                                        <!-- <img class="rounded-3" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAHElEQVQI12P4//8/w38GIAXDIBKE0DHxgljNBAAO9TXL0Y4OHwAAAABJRU5ErkJggg==" alt="Red dot" /> -->
                                     </div>
                                 </div>  
