--- a/views/visiteurs/index.ejs
+++ b/views/visiteurs/index.ejs
@@ -1,93 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<title>Blogzine - Blog and Magazine Bootstrap 5 Theme</title>
-	<!-- Meta Tags -->
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="author" content="Webestica.com">
-	<meta name="description" content="Bootstrap based News, Magazine and Blog Theme">
 
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="/front/assets/images/favicon.ico">
-
-	<!-- Google Font -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="/front/css2.css?family=Nunito+Sans:wght@400;700&family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
-
-	<!-- Plugins CSS -->
-	<link rel="stylesheet" type="text/css" href="/front/assets/vendor/font-awesome/css/all.min.css">
-	<link rel="stylesheet" type="text/css" href="/front/assets/vendor/bootstrap-icons/bootstrap-icons.css">
-	<link rel="stylesheet" type="text/css" href="/front/assets/vendor/tiny-slider/tiny-slider.css">
-	<!-- Theme CSS -->
-	<link id="style-switch" rel="stylesheet" type="text/css" href="/front/assets/css/style.css">
-</head>
-
-<body>
-
-    <header class="navbar-light navbar-sticky header-static">
-        <!-- Logo Nav START -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="container">
-                <!-- Logo START -->
-                <a class="navbar-brand" href="index.html">
-                    <img class="navbar-brand-item light-mode-item" src="/front/assets/images/logo.svg" alt="logo">			
-                    <img class="navbar-brand-item dark-mode-item" src="/front/assets/images/logo-light.svg" alt="logo">			
-                </a>
-                <!-- Logo END -->
-    
-                <!-- Responsive navbar toggler -->
-                <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="text-body h6 d-none d-sm-inline-block">Menu</span>
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-    
-                <!-- Main navbar START -->
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <!-- Nav Search START -->
-                    <div class="nav mt-3 mt-lg-0 px-4 flex-nowrap align-items-center">
-                        <div class="nav-item w-100">
-                            <form class="rounded position-relative" method="post" action="/info/chercher">
-                                <input class="form-control pe-5 bg-light" name="chercher" type="search" placeholder="chercher un article" aria-label="Search">
-                                <button class="btn bg-transparent px-2 py-0 position-absolute top-50 end-0 translate-middle-y" type="submit"><i class="bi bi-search fs-5"> </i></button>
-                            </form>
-                        </div>
-                    </div>
-                    <!-- Nav Search END -->
-                    <ul class="navbar-nav navbar-nav-scroll ms-auto">
-                        
-                        <!-- Nav item 1 Demos -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link  active" href="/info" id="homeMenu"  >Home</a>
-                            
-                        </li>
-    
-                        <!-- Nav item 2 Pages -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="pagesMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
-							<ul class="dropdown-menu" aria-labelledby="homeMenu">
-                                <li> <a class="dropdown-item" href="/info/article/juridique">jurudique</a></li>
-                                <li> <a class="dropdown-item" href="/info/article/scientifique">scientifique</a></li>
-                                <li> <a class="dropdown-item" href="/info/index-2.html">et quelle que chose </a></li>
-							</ul>	
-                        </li> 
-    
-                        <!-- Nav item 3 Post -->
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="postMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
-							<ul class="dropdown-menu" aria-labelledby="postMenu">
-                                <li> <a class="dropdown-item" href="/info/login">login</a></li>
-							</ul>	
-                        </li>
-    
-                    </ul>
-                </div>
-                
-            </div>
-        </nav>
-        <!-- Logo Nav END -->
-    </header>
-
+<%- include('../include/header') %> 
 <!-- on doit suprimer tout ce qui vient avant  -->
 
 <!-- photo -->
@@ -303,7 +215,7 @@
 							<img class="rounded-3" src="data:image/png;base64,<%= element.imageArticle %> " alt="Card image" style="height:150px; width: 220px" >
 						</div>
 						<div class="card-body px-0 pt-3">
-							<h4 class="card-title"><a href="/info/article/lire/<%= element.idArticle %>" class="btn-link text-reset stretched-link fw-bold"><%= element.titreArticle  %></a> <a href="#" class="badge <% if (element.typeArticle.libelleTypeAticle=='scientifique') { %><%='bg-primary'%><% }%> <% if (element.typeArticle.libelleTypeAticle=='juridique') { %><%='bg-dark'%><% }%> <% if (element.typeArticle.libelleTypeAticle=='economique') { %><%='bg-danger'%><% }%>    mb-2"><i class="fas fa-circle me-2 small fw-bold"></i><%= element.typeArticle.libelleTypeAticle  %> </a></h4>
+							<h4 class="card-title"><a href="/article/lire/<%= element.idArticle %>" class="btn-link text-reset stretched-link fw-bold"><%= element.titreArticle  %></a> <a href="#" class="badge <% if (element.typeArticle.libelleTypeAticle=='scientifique') { %><%='bg-primary'%><% }%> <% if (element.typeArticle.libelleTypeAticle=='juridique') { %><%='bg-dark'%><% }%> <% if (element.typeArticle.libelleTypeAticle=='economique') { %><%='bg-danger'%><% }%>    mb-2"><i class="fas fa-circle me-2 small fw-bold"></i><%= element.typeArticle.libelleTypeAticle  %> </a></h4>
 							<!-- Card info -->
 							<ul class="nav nav-divider align-items-center text-uppercase small">
 								<li class="nav-item">
