--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -19,7 +19,8 @@
 	<link rel="stylesheet" type="text/css" href="/front/assets/vendor/font-awesome/css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="/front/assets/vendor/bootstrap-icons/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="/front/assets/vendor/tiny-slider/tiny-slider.css">
-
+    <script src="https://cdn.tiny.cloud/1/vgwzf15khmel8f39jk8cvgwywed9sd08t1yodtswkdclcgwj/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+    
 	<!-- Theme CSS -->
 	<link id="style-switch" rel="stylesheet" type="text/css" href="/front/assets/css/style.css">
 </head>
@@ -88,8 +89,6 @@
                                 <li> <a class="dropdown-item" href="/admin">admin</a></li>
                                 <li> <a class="dropdown-item" href="/admin/article/create">Ajouter</a></li>
                                 <li> <a class="dropdown-item" href="/admin/deconnect">se deconnecter </a></li>  
-
-
                                 <%}else{ %> 
                                 <li> <a class="dropdown-item" href="/login">login</a></li>
                                 <% }%>     
