--- a/views/visiteurs/article/listeArticle.ejs
+++ b/views/visiteurs/article/listeArticle.ejs
@@ -43,8 +43,8 @@
                                                 <div>
                                                     <h5 class="mb-1"><a href="#" class="stretched-link text-reset btn-link">Billy Vasquez</a></h5>
                                                     <ul class="nav align-items-center small">
-                                                        <li class="nav-item me-3">Aug 15, 2022</li>
-                                                        <li class="nav-item"><i class="far fa-clock me-1"></i>18 min read</li>
+                                                        <li class="nav-item me-3"><%= moment(element.datePublication).format('DD/MMMM/YYYY')  %></li>
+                                                        
                                                     </ul>
                                                 </div>
                                             </div>
