--- a/views/visiteurs/article/sortieChercher.ejs
+++ b/views/visiteurs/article/sortieChercher.ejs
@@ -27,7 +27,7 @@
                                                     </div>
                                                 </div>
                                             </li>
-                                            <li class="nav-item">Jan 22, 2021</li>
+                                            <li class="nav-item"><%= moment(element.datePublication).format('DD/MMMM/YYYY')  %></li>
                                         </ul>
                                     </div>
                                     
