--- a/views/Admin/article/ajout.ejs
+++ b/views/Admin/article/ajout.ejs
@@ -3,7 +3,7 @@
 <div class="container-lg">
   <div class="row justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8">
-          <form class="tab-content py-6" id="wizardSteps" action=" /admin/article/create" method="post"  enctype="multipart/form-data">
+          <form class="tab-content py-6" id="wizardSteps" action="/admin/article/create" method="post"  enctype="multipart/form-data">
               <div class="tab-pane fade show active" id="wizardStepOne" role="tabpanel" aria-labelledby="wizardTabOne">
                   <div class="row justify-content-center">
                       <div class="col-12 col-md-10 col-lg-8 col-xl-6 text-center">
@@ -35,7 +35,14 @@
                       <label class="form-label mb-1">
                           Description
                       </label>
-                      <textarea class="form-control" name="descriptionArticle" id="" cols="30" rows="10"></textarea>
+                      <textarea class="form-control" name="descriptionArticle" id="descriptionArticle" cols="30" rows="10"></textarea>
+                      <script>
+                        tinymce.init({
+                          selector: 'textarea',
+                          plugins: 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+                          toolbar_mode: 'floating',
+                        });
+                      </script>
                   </div>
 
                   <div class="form-group">
@@ -57,7 +64,7 @@
                         <% } %>
                         
                         
-                      </select>
+                    </select>
                   </div>    
               </div>      
               <button type="submit" class="btn btn-lg btn-primary">Continue</button>
@@ -66,3 +73,15 @@
       </div>
   </div>
 </div>
+
+<!-- Bootstrap JS -->
+<script src="/front/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Vendors -->
+<script src="/front/assets/vendor/tiny-slider/tiny-slider.js"></script>
+
+<!-- Template Functions -->
+<script src="/front/assets/js/functions.js"></script>
+
+</body>
+</html>
