--- a/views/visiteurs/article/listeArticleCareaux.ejs
+++ b/views/visiteurs/article/listeArticleCareaux.ejs
@@ -50,7 +50,7 @@
 							</div>
 							<div class="card-body px-0 pt-3">
 								<h4 class="card-title"><a href="/article/lire/<%= element.idArticle %>" class="btn-link text-reset fw-bold"><%= element.titreArticle  %> </a></h4>
-								<p class="card-text">  <p><%- element.desc %>.... </p></p>
+								<p class="card-text">  <%- element.desc %> .... </p>
 								<!-- Card info -->
 								<ul class="nav nav-divider align-items-center d-none d-sm-inline-block">
 									<li class="nav-item">
@@ -63,7 +63,7 @@
 											</div>
 										</div>
 									</li>
-									<li class="nav-item">Jan 22, 2021</li>
+									<li class="nav-item"><%= moment(element.datePublication).format('DD/MMMM/YYYY')  %></li>
 								</ul>
 							</div>
 						</div>
