--- a/views/visiteurs/article/voirArticle.ejs
+++ b/views/visiteurs/article/voirArticle.ejs
@@ -14,8 +14,8 @@
                             by <a href="#" class="text-reset btn-link">Louis Ferguson</a>
                             </div>
                         </li>
-                        <li class="nav-item">Nov 15, 2021</li>
-                        <li class="nav-item">5 min read</li>
+                        <li class="nav-item"><%= moment(article.datePublication).format('DD/MMMM/YYYY')  %></li>
+                        
                     </ul>
             </div>
         </div>
