--- a/views/Admin/article/modifier.ejs
+++ b/views/Admin/article/modifier.ejs
@@ -35,7 +35,14 @@
                       <label class="form-label mb-1">
                           Description
                       </label>
-                      <textarea   class="form-control"  name="descriptionArticle" id="" cols="30" rows="10"> <%= article.descriptionArticle  %>  </textarea>
+                      <textarea   class="form-control"  name="descriptionArticle" id="descriptionArticle" cols="30" rows="10"> <%= article.descriptionArticle  %>  </textarea>
+                      <script>
+                        tinymce.init({
+                          selector: 'textarea',
+                          plugins: 'advlist autolink lists link image charmap print preview hr anchor pagebreak',
+                          toolbar_mode: 'floating',
+                        });
+                      </script>
                   </div>
 
                   <div class="form-group">
