--- a/views/Admin/article/ajout.ejs
+++ b/views/Admin/article/ajout.ejs
@@ -73,15 +73,4 @@
       </div>
   </div>
 </div>
-
-<!-- Bootstrap JS -->
-<script src="/front/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Vendors -->
-<script src="/front/assets/vendor/tiny-slider/tiny-slider.js"></script>
-
-<!-- Template Functions -->
-<script src="/front/assets/js/functions.js"></script>
-
-</body>
-</html>
+<%- include('../../include/footer') %> 
