--- a/views/Admin/auth/connexion.ejs
+++ b/views/Admin/auth/connexion.ejs
@@ -40,7 +40,6 @@
     </section>
 
 
-<!-- Back to top -->
-<div class="back-top"><i class="bi bi-arrow-up-short"></i></div>
 
 
+<%- include('../../include/footer.ejs') %> 
