--- a/views/visiteurs/article/voirArticle.ejs
+++ b/views/visiteurs/article/voirArticle.ejs
@@ -92,22 +92,4 @@
     </main>   
     
 
-
-
-<!-- Back to top -->
-<div class="back-top"><i class="bi bi-arrow-up-short"></i></div>
-
-<!-- =======================
-JS libraries, plugins and custom scripts -->
-
-<!-- Bootstrap JS -->
-<script src="/front/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- Vendors -->
-<script src="/front/assets/vendor/tiny-slider/tiny-slider.js"></script>
-
-<!-- Template Functions -->
-<script src="/front/assets/js/functions.js"></script>
-
-</body>
-</html>
+<%- include('../../include/footer') %> 
