--- a/views/visiteurs/article/listeArticleCareaux.ejs
+++ b/views/visiteurs/article/listeArticleCareaux.ejs
@@ -1,4 +1,5 @@
 <%- include('../../include/header') %> 
+
 <section class="pt-4">
 	<div class="container">
 		<div class="row">
@@ -104,3 +105,5 @@
         </div> 
     </div>
 </section>
+
+<%- include('../../include/footer') %> 
