--- a/views/include/header.ejs
+++ b/views/include/header.ejs
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Webestica.com">
-	<meta name="description" content="Bootstrap based News, Magazine and Blog Theme">
+	<meta name="description" content="actualités juridique,economique et scientifique">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="/back/images/fin.jpg">
@@ -33,7 +33,7 @@
             <div class="container">
                 <!-- Logo START -->
                 <a class="navbar-brand" href="/">
-                    <img class="navbar-brand-item light-mode-item" src="/back/images/fin.jpg" alt="logo"  width="120px">				 			
+                    <img  src="/back/images/fin.jpg" alt="logo"  width="120px">				 			
                 </a>
                 <!-- Logo END -->
     
@@ -59,7 +59,7 @@
                         
                         <!-- Nav item 1 Demos -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link  active" href="/" id="homeMenu"  >Home</a>
+                            <a class="nav-link  active" href="/" id="homeMenu"  >ACCUEIL</a>
                             
                         </li>
     
@@ -82,7 +82,7 @@
     
                         <!-- Nav item 3 Post -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="postMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="postMenu" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Authentification</a>
                             <ul class="dropdown-menu" aria-labelledby="postMenu">
                                 <% if(locals.user){%>
                                 <li> <a class="dropdown-item" href="/admin">admin</a></li>
