--- a/views/visiteurs/index.ejs
+++ b/views/visiteurs/index.ejs
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="author" content="Webestica.com">
-	<meta name="description" content="Bootstrap based News, Magazine and Blog Theme">
+	<meta name="description" content="actualités juridique,economique et scientifique">
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="back/images/fin.jpg">
@@ -44,7 +44,7 @@
             <div class="container">
                 <!-- Logo START -->
                 <a class="navbar-brand" href="/">
-                    <img class="navbar-brand-item light-mode-item" src="back/images/fin.jpg" alt="logo"  width="120px">			
+                    <img src="back/images/fin.jpg" alt="logo"  width="120px">			
                 </a>
                 <!-- Logo END -->
     
@@ -234,7 +234,7 @@
 
 	
 <!-- About Us Area -->
-<section class="about_us_area row" style="padding-top:30px padding-left: 180px; padding-right: 180px; margin-left: 180px;">
+<section class="about_us_area row">
 	<div class="container">
 		<div class="tittle wow fadeInUp">
 			<h2 style="color:green;">A PROPOS DE NOUS</h2>
@@ -264,7 +264,7 @@
 <!-- End About Us Area -->
 
 <!-- OUR PURPOSES -->
-<section class="about_us_area row" style="padding-top:30px padding-left: 180px; padding-right: 180px; margin-left: 180px;">
+<section class="about_us_area row" >
 	<div class="container">
 		<div class="row purpose">
 			<div class="col-md-6 col-sm-6 about_client">
@@ -286,6 +286,76 @@
 		</div>
 	</div>
 </section>
+
+
+ <!-- Top Header_Area -->
+ <section class="top_header_area" style="background:darkblue;">
+	<div class="container">
+		<ul class="nav navbar-nav top_nav">
+			<li><a href="#"><i class="fa fa-phone"></i>+228 96098759</a></li>
+			<li><a href="#"><i class="fa fa-envelope-o"></i>LAS&INFO@gmail.com</a></li>
+			<li><a href="#"><i class="fa fa-clock-o"></i>Mon - Sat 12:00 - 20:00</a></li>
+		</ul>
+		<ul class="nav navbar-nav navbar-right social_nav">
+			<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+			<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+			<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+			<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+			<li><a href="#"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+			<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+		</ul>
+	</div>
+</section>
+<!-- End Top Header_Area -->
+
+<!-- Footer Area -->
+<footer class="footer_area">
+	<div class="container">
+		<div class="footer_row row">
+			<div class="col-md-3 col-sm-6 footer_about">
+				<h2>ABOUT OUR COMPANY</h2>
+				<img src="images/fin.jpg" alt="">
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<ul class="socail_icon">
+					<li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
+					<li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+				</ul>
+			</div>
+			<div class="col-md-3 col-sm-6 footer_about quick">
+				<h2>Quick links</h2>
+				<ul class="quick_link">
+					<li><a href="#"><i class="fa fa-chevron-right"></i>ACCUEIL</a></li>
+					<li><a href="#"><i class="fa fa-chevron-right"></i>ACTUALITES JURIDIQUES</a></li>
+					<li><a href="#"><i class="fa fa-chevron-right"></i>ACTUALITES ECONOMIQUE</a></li>
+					<li><a href="#"><i class="fa fa-chevron-right"></i>EVENEMENTS</a></li>
+					<li><a href="#"><i class="fa fa-chevron-right"></i>PUBLICITES</a></li>
+					<li><a href="#"><i class="fa fa-chevron-right"></i>BLOGS</a></li>
+				</ul>
+			</div>
+			<div class="col-md-3 col-sm-6 footer_about">
+				<h2>Twitter Feed</h2>
+				<a href="#" class="twitter">@colorlib: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</a>
+				<a href="#" class="twitter">@colorlib: Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</a>
+			</div>
+			<div class="col-md-3 col-sm-6 footer_about">
+				<h2>CONTACT US</h2>
+				<address>
+					<p>Have questions, comments or just want to say hello:</p>
+					<ul class="my_address">
+						<li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>info@thethemspro.com</a></li>
+						<li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i>+228 96098749</a></li>
+						<li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span>Sector # 10, Road # 05, Plot # 31, Uttara, Dhaka 1230 </span></a></li>
+					</ul>
+				</address>
+			</div>
+		</div>
+	</div>
+	<div class="copyright_area">
+		Copyright 2022 All rights reserved. Designed by <a href="">@Reskode_.</a>
+	</div>
+</footer>
 <!-- End OF OUR PURPOSES -->
 
 
